Modernizer collection usage in tests